2000-03-03  Roland McGrath  <roland@baalperazim.frob.com>

	* dir.c (diskfs_get_directs): Don't allocate buffer for *DATA until
	after scanning for ENTRY and possibly returning EOF.

1999-10-13  Roland McGrath  <roland@baalperazim.frob.com>

	* consts.c (diskfs_name_max): New variable.

1999-09-13  Roland McGrath  <roland@baalperazim.frob.com>

	* dir.c, sizes.c, pager.c: Reverted changes related to io_map_segment.

1999-09-09  Roland McGrath  <roland@baalperazim.frob.com>

	* Makefile (makemode): servers -> server.
	(targets): Replaced with target; remove ufs.static.
	(ufs.static-LDFLAGS): Variable removed.
	(ufs.static, ufs): Remove deps.

1999-09-08  Thomas Bushnell, BSG  <tb@mit.edu>

	* dir.c (diskfs_get_directs): Initialize `err' to shut gcc up.

1999-09-07  Thomas Bushnell, BSG  <tb@mit.edu>

	* dir.c (diskfs_lookup_hard): Pass additional parameter to
	diskfs_get_filemap.
	(diskfs_dirempty): Likewise.
	* sizes.c (diskfs_truncate): Likewise.
	(block_extended): Likewise.
	(diskfs_grow): Likewise.
	* pager.c (diskfs_get_filemap): Accept additional parameter.

1999-09-04  Thomas Bushnell, BSG  <tb@mit.edu>

	* pager.c (find_address): If !ISREAD, then don't return errors for
	access past NP->allocsize, and clear *ADDR and *DISKSIZE.  These
	can happen through harmless races against truncate.
	(pager_write_page): Don't print annoying messages for writes to
	unallocated disk.  These can happen through harmless races against
	truncate, and so we should not pester the console with them.

1999-07-10  Roland McGrath  <roland@baalperazim.frob.com>

	* ufs.h: Add #include <sys/mman.h> for munmap decl.

1999-07-09  Thomas Bushnell, BSG  <tb@mit.edu>

	* dir.c (diskfs_get_directs): Use mmap instead of vm_allocate.
	* hyper.c (get_hypermetadata): Likewise.
	* pager.c (pager_read_page): Likewise.

1999-07-06  Thomas Bushnell, BSG  <tb@mit.edu>

	* hyper.c (diskfs_readonly_changed): Use mprotect instead of
	vm_protect.
